telink: Rework LZMA module in a usual Zephyr way
Due to issue with "west status" created LZMA fork under
Telink GitHub account:
https://github.com/telink-semi/xz/tree/telink-zephyr

Signed-off-by: Andrii Bilynskyi <andrii.bilynskyi@telink-semi.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -4898,8 +4898,7 @@ West:
   status: odd fixes
   collaborators:
     - JiaT75
-  files:
-    - modules/lzma/
+  files: []
   labels:
     - "area: Compression"
 
