--- a/lib/libc/common/Kconfig
+++ b/lib/libc/common/Kconfig
@@ -109,7 +109,7 @@ config COMMON_LIBC_THRD
 	depends on DYNAMIC_THREAD
 	# Note: the POSIX_API dependency is only necessary until common elements
 	# of C11 threads and POSIX API can be abstracted out to a common library.
-	depends on POSIX_API
+	depends on POSIX_THREADS
 	default y
 	help
 	  Common implementation of C11 <threads.h> API.
@@ -120,3 +120,9 @@ config COMMON_LIBC_REMOVE
 	default y if FILE_SYSTEM
 	help
 	  Common implementation of remove().
+
+config COMMON_LIBC_FCLOSE
+	bool "Common C library fclose"
+	default y if ZVFS && !MINIMAL_LIBC
+	help
+	  Enable the common C library implementation of fclose()
