pinctrl: gecko: add low power support
- Add low power pin configuration support in gecko

Signed-off-by: Romain Pelletant <romainp@kickmaker.net>

--- a/dts/bindings/pinctrl/silabs,gecko-pinctrl.yaml
+++ b/dts/bindings/pinctrl/silabs,gecko-pinctrl.yaml
@@ -69,6 +69,12 @@ child-binding:
   child-binding:
     description: |
       Silabs pin controller pin configuration group.
+
+    include:
+      - name: pincfg-node.yaml
+        property-allowlist:
+          - low-power-enable
+
     properties:
       psels:
         required: true
