--- a/.github/workflows/telink-tl321x-build.yaml
+++ b/.github/workflows/telink-tl321x-build.yaml
@@ -122,6 +122,11 @@ jobs:
         cd ..
         west build -b tl3218      -d build_mcuboot_tl3218_lzma                bootloader/mcuboot/boot/zephyr                -- -DCONFIG_COMPILER_WARNINGS_AS_ERRORS=y -DCONFIG_COMPRESS_LZMA=y -DCONFIG_BOOT_UPGRADE_ONLY=y
 
+    - name: Build TL321X bootloader/mcuboot/boot - chip id
+      run: |
+        cd ..
+        west build -b tl3218      -d build_mcuboot_chip_id_tl3218             bootloader/mcuboot/boot/zephyr                -- -DCONFIG_COMPILER_WARNINGS_AS_ERRORS=y -DCONFIG_LOG_DEFAULT_LEVEL=3 -DCONFIG_TELINK_TLX_MCUBOOT_STARTUP=y
+
     - name: Collect artifacts
       run: |
         mkdir telink_build_artifacts
@@ -137,9 +142,10 @@ jobs:
         cp ../build_peripheral_ht_tl3218/zephyr/zephyr.bin              telink_build_artifacts/tl3218_peripheral_ht.bin
         cp ../build_ot_cli_tl3218/zephyr/zephyr.bin                     telink_build_artifacts/tl3218_ot_cli.bin
         cp ../build_ot_coprocessor_rcp_uart_tl3218/zephyr/zephyr.bin    telink_build_artifacts/tl3218_ot_coprocessor_rcp_uart.bin
-        cp ../build_ot_coprocessor_rcp_usb_tl3218/zephyr/zephyr.bin    telink_build_artifacts/tl3218_ot_coprocessor_rcp_usb.bin
+        cp ../build_ot_coprocessor_rcp_usb_tl3218/zephyr/zephyr.bin     telink_build_artifacts/tl3218_ot_coprocessor_rcp_usb.bin
         cp ../build_usb_console_tl3218/zephyr/zephyr.bin                telink_build_artifacts/tl3218_usb_console.bin
         cp ../build_crypto_mbedtls_tl3218/zephyr/zephyr.bin             telink_build_artifacts/tl3218_mbedtls.bin
+        cp ../build_mcuboot_chip_id_tl3218/zephyr/zephyr.bin            telink_build_artifacts/tl3218_mcuboot_chip_id.bin
 
     - name: Publish artifacts
       uses: actions/upload-artifact@v3
