--- a/boards/telink/tlsr9258a/tlsr9258a-pinctrl.dtsi
+++ b/boards/telink/tlsr9258a/tlsr9258a-pinctrl.dtsi
@@ -15,7 +15,7 @@
 	/* UART0: TX(PB2), RX(PB3), RTS(PB4), CTS(PB6) */
 
 	uart0_tx_pb2_default: uart0_tx_pb2_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_2, (B95_FUNC_UART0_TX | B95_PULL_UP))>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_2, B95_FUNC_UART0_TX)>;
 	};
 	uart0_rx_pb3_default: uart0_rx_pb3_default {
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_3,
@@ -25,7 +25,8 @@
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_4, B95_FUNC_UART0_RTS)>;
 	};
 	uart0_cts_pb6_default: uart0_cts_pb6_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_6, B95_FUNC_UART0_CTS_I)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_6,
+				(B95_FUNC_UART0_CTS_I | B95_PULL_UP))>;
 	};
 
 	/* UART1: TX(PC6), RX(PC7), RTS(PC5), CTS(PC4) */
@@ -34,13 +35,15 @@
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_6, B95_FUNC_UART1_TX)>;
 	};
 	uart1_rx_pc7_default: uart1_rx_pc7_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_7, B95_FUNC_UART1_RTX_IO)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_7,
+				(B95_FUNC_UART1_RTX_IO | B95_PULL_UP))>;
 	};
 	uart1_rts_pc5_default: uart1_rts_pc5_default {
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_5, B95_FUNC_UART1_RTS)>;
 	};
 	uart1_cts_pc4_default: uart1_cts_pc4_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_4, B95_FUNC_UART1_CTS_I)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_4,
+				(B95_FUNC_UART1_CTS_I | B95_PULL_UP))>;
 	};
 
 	/* PWM Channel 0 (PB7) */
