--- a/boards/telink/tlsr9518adk80d/tlsr9518adk80d-pinctrl.dtsi
+++ b/boards/telink/tlsr9518adk80d/tlsr9518adk80d-pinctrl.dtsi
@@ -18,13 +18,13 @@
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_2, B91_FUNC_C)>;
 	};
 	uart0_rx_pb3_default: uart0_rx_pb3_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_3, B91_FUNC_C)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_3, (B91_FUNC_C | B91_PULL_UP))>;
 	};
 	uart0_rts_pb4_default: uart0_rts_pb4_default {
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_4, B91_FUNC_C)>;
 	};
 	uart0_cts_pb6_default: uart0_cts_pb6_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_6, B91_FUNC_C)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_B, B9x_PIN_6, (B91_FUNC_C | B91_PULL_UP))>;
 	};
 
 	/* UART0: TX(PA3), RX(PA4), RTS(PA2), CTS(PA1) */
@@ -33,13 +33,13 @@
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_A, B9x_PIN_3, B91_FUNC_B)>;
 	};
 	uart0_rx_pa4_default: uart0_rx_pa4_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_A, B9x_PIN_4, B91_FUNC_B)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_A, B9x_PIN_4, (B91_FUNC_B | B91_PULL_UP))>;
 	};
 	uart0_rts_pa2_default: uart0_rts_pa2_default {
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_A, B9x_PIN_2, B91_FUNC_B)>;
 	};
 	uart0_cts_pa1_default: uart0_cts_pa1_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_A, B9x_PIN_1, B91_FUNC_B)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_A, B9x_PIN_1, (B91_FUNC_B | B91_PULL_UP))>;
 	};
 
 	/* UART0: TX(PD2), RX(PD3), RTS(PD1), CTS(PD0) */
@@ -48,13 +48,13 @@
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_2, B91_FUNC_A)>;
 	};
 	uart0_rx_pd3_default: uart0_rx_pd3_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_3, B91_FUNC_A)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_3, (B91_FUNC_A | B91_PULL_UP))>;
 	};
 	uart0_rts_pd1_default: uart0_rts_pd1_default {
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_1, B91_FUNC_A)>;
 	};
 	uart0_cts_pd0_default: uart0_cts_pd0_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_0, B91_FUNC_A)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_0, (B91_FUNC_A | B91_PULL_UP))>;
 	};
 
 	/* UART1: TX(PC6), RX(PC7), RTS(PC5), CTS(PC4) */
@@ -63,13 +63,13 @@
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_6, B91_FUNC_C)>;
 	};
 	uart1_rx_pc7_default: uart1_rx_pc7_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_7, B91_FUNC_C)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_7, (B91_FUNC_C | B91_PULL_UP))>;
 	};
 	uart1_rts_pc5_default: uart1_rts_pc5_default {
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_5, B91_FUNC_C)>;
 	};
 	uart1_cts_pc4_default: uart1_cts_pc4_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_4, B91_FUNC_C)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_C, B9x_PIN_4, (B91_FUNC_C | B91_PULL_UP))>;
 	};
 
 	/* UART1: TX(PD6), RX(PD7), RTS(PD5), CTS(PD4) */
@@ -78,13 +78,13 @@
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_6, B91_FUNC_A)>;
 	};
 	uart1_rx_pd7_default: uart1_rx_pd7_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_7, B91_FUNC_A)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_7, (B91_FUNC_A | B91_PULL_UP))>;
 	};
 	uart1_rts_pd5_default: uart1_rts_pd5_default {
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_5, B91_FUNC_A)>;
 	};
 	uart1_cts_pd4_default: uart1_cts_pd4_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_4, B91_FUNC_A)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_D, B9x_PIN_4, (B91_FUNC_A | B91_PULL_UP))>;
 	};
 
 	/* UART1: TX(PE0), RX(PE2), RTS(PE3), CTS(PE1) */
@@ -93,13 +93,13 @@
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_E, B9x_PIN_0, B91_FUNC_B)>;
 	};
 	uart1_rx_pe2_default: uart1_rx_pe2_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_E, B9x_PIN_2, B91_FUNC_B)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_E, B9x_PIN_2, (B91_FUNC_B | B91_PULL_UP))>;
 	};
 	uart1_rts_pe3_default: uart1_rts_pe3_default {
 		pinmux = <B9x_PINMUX_SET(B9x_PORT_E, B9x_PIN_3, B91_FUNC_B)>;
 	};
 	uart1_cts_pe1_default: uart1_cts_pe1_default {
-		pinmux = <B9x_PINMUX_SET(B9x_PORT_E, B9x_PIN_1, B91_FUNC_B)>;
+		pinmux = <B9x_PINMUX_SET(B9x_PORT_E, B9x_PIN_1, (B91_FUNC_B | B91_PULL_UP))>;
 	};
 
 	/* PWM Channel 0 (PB4) */
