--- a/soc/telink/tlsr/telink_tlx/Kconfig
+++ b/soc/telink/tlsr/telink_tlx/Kconfig
@@ -103,6 +103,8 @@ if BOOTLOADER_MCUBOOT || MCUBOOT
 config TELINK_TLX_MCUBOOT_STARTUP
 	bool "Telink TLx MCUBoot startup handler"
 	depends on MCUBOOT
+	select CRC
+	select UART_DRV_CMD
 	help
 		Run Telink specific vendor code before MCUBoot
 		main process
