@FIR-445: M85 -TSI shell

--- a/tsi_core/prj.conf
+++ b/tsi_core/prj.conf
@@ -2,12 +2,13 @@ CONFIG_LOG=y
 CONFIG_CONSOLE=y
 CONFIG_LOG_PRINTK=y
 CONFIG_UART_CONSOLE=y
-CONFIG_SHELL=n
+CONFIG_SHELL=y
 CONFIG_BOOT_BANNER=y
 CONFIG_SHELL_BACKEND_SERIAL_INTERRUPT_DRIVEN=n
 CONFIG_SHELL_BACKEND_SERIAL_RX_POLL_PERIOD=1
 
 CONFIG_LOG_BACKEND_UART=y
+##
 
 # Use immediate mode so all messages are being
 # printed. Under deferred mode, there may be
