--- a/samples/bluetooth/hci_ipc/nrf5340_cpunet_bt_mesh-bt_ll_sw_split.conf
+++ b/samples/bluetooth/hci_ipc/nrf5340_cpunet_bt_mesh-bt_ll_sw_split.conf
@@ -1,13 +1,25 @@
 CONFIG_IPC_SERVICE=y
 CONFIG_MBOX=y
 
-CONFIG_HEAP_MEM_POOL_SIZE=4096
-
+CONFIG_ISR_STACK_SIZE=1024
+CONFIG_IDLE_STACK_SIZE=256
 CONFIG_MAIN_STACK_SIZE=512
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=512
+CONFIG_HEAP_MEM_POOL_SIZE=4096
+CONFIG_CBPRINTF_REDUCED_INTEGRAL=y
+
+CONFIG_ISR_TABLES_LOCAL_DECLARATION=y
+CONFIG_LTO=y
 
 CONFIG_BT=y
 CONFIG_BT_HCI_RAW=y
+
+# Host and Controller common dependencies
+CONFIG_BT_BROADCASTER=y
+CONFIG_BT_OBSERVER=y
+CONFIG_BT_EXT_ADV=y
+CONFIG_BT_CENTRAL=y
+CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_MAX_CONN=16
 
 
@@ -18,6 +30,10 @@ CONFIG_BT_BUF_CMD_TX_COUNT=10
 # Controller
 CONFIG_BT_LL_SW_SPLIT=y
 
+# Enabled Advanced Features, unreserved continunous scanning
+CONFIG_BT_CTLR_ADVANCED_FEATURES=y
+CONFIG_BT_CTLR_SCAN_UNRESERVED=y
+
 # Disable unused Bluetooth features
 CONFIG_BT_CTLR_DUP_FILTER_LEN=0
 CONFIG_BT_CTLR_LE_ENC=n
@@ -27,6 +43,14 @@ CONFIG_BT_PHY_UPDATE=n
 CONFIG_BT_CTLR_MIN_USED_CHAN=n
 CONFIG_BT_CTLR_PRIVACY=n
 
-CONFIG_BT_OBSERVER=y
-CONFIG_BT_BROADCASTER=y
-CONFIG_BT_EXT_ADV=y
+# The hci_ipc image has a quite high RAM usage so we need to carefully
+# tweak Mbed TLS parameters in order to build successfully:
+# - use CSPRNG source as random source for PSA. This removes
+#   requiement for legacy Mbed TLS entropy+ctr-drbg modules, which
+#   saves RAM and ROM;
+# - use ROM pre-computed tables for AES;
+# - reduce the number of key slots to 3 in the PSA core. This is not a
+#   huge limitation since PSA crypto is only used for AES-CMAC in hci_ipc.
+CONFIG_MBEDTLS_PSA_CRYPTO_EXTERNAL_RNG=y
+CONFIG_MBEDTLS_AES_ROM_TABLES=y
+CONFIG_MBEDTLS_PSA_KEY_SLOT_COUNT=3
