samples: subsys: ipc: icmsg: add nRF54H20DK with PPR remote
Adds support for nRF54H20DK with the PPR VPR processor configured as the
remote.

Signed-off-by: Daniel Mangum <georgedanielmangum@gmail.com>

--- a/samples/subsys/ipc/ipc_service/icmsg/sample.yaml
+++ b/samples/subsys/ipc/ipc_service/icmsg/sample.yaml
@@ -166,3 +166,23 @@ tests:
         - "host: Sent"
         - "host: Received"
         - "host: IPC-service HOST demo ended"
+
+  sample.ipc.icmsg.nrf54h20:
+    platform_allow: nrf54h20dk/nrf54h20/cpuapp
+    integration_platforms:
+      - nrf54h20dk/nrf54h20/cpuapp
+    tags: ipc
+    extra_args:
+      icmsg_SNIPPET=nordic-ppr
+    sysbuild: true
+    harness: console
+    harness_config:
+      type: multi_line
+      ordered: false
+      regex:
+        - "host: IPC-service HOST demo started"
+        - "host: Ep bounded"
+        - "host: Perform sends for"
+        - "host: Sent"
+        - "host: Received"
+        - "host: IPC-service HOST demo ended"
