drivers: can: transceiver: termination gpio
The functionality for termination gpio is used on
some boards like ST's b-g431b-esc1 motor controller board.
This feature is also supported by SocketCAN in linux.

Signed-off-by: Alexander Kozhinov <ak.alexander.kozhinov@gmail.com>

--- a/dts/bindings/phy/can-transceiver-gpio.yaml
+++ b/dts/bindings/phy/can-transceiver-gpio.yaml
@@ -21,3 +21,9 @@ properties:
       GPIO to use to put the CAN transceiver into standby. This GPIO is driven
       inactive when the CAN transceiver is enabled and active when the CAN
       transceiver is disabled.
+
+  termination-gpios:
+    type: phandle-array
+    description: |
+      GPIO to use to enable/disable the CAN transceiver termination resistor.
+      This GPIO will be not changed during CAN transceiver initialzation phase.
