modules: hostap: Define dedicated heap for supplicant
Create dedicated heap for supplicant operations and define
the heap size.

Signed-off-by: Ravi Dondaputi <ravi.dondaputi@nordicsemi.no>

--- a/modules/hostap/Kconfig
+++ b/modules/hostap/Kconfig
@@ -23,7 +23,8 @@ config WIFI_NM_WPA_SUPPLICANT
 
 if WIFI_NM_WPA_SUPPLICANT
 
-config HEAP_MEM_POOL_ADD_SIZE_HOSTAP
+config WIFI_NM_WPA_SUPPLICANT_HEAP
+	int "Dedicated memory pool for wpa_supplicant"
 	def_int 85000 if WIFI_NM_WPA_SUPPLICANT_CRYPTO_ENTERPRISE && !MBEDTLS_ENABLE_HEAP
 	def_int 85000 if WIFI_NM_HOSTAPD_AP
 	def_int 40000 if WIFI_NM_WPA_SUPPLICANT_AP
