Bluetooth: Rename Kconfig files to avoid file extension issues
Most Kconfig files used the format "Kconfig.module" where "module"
would be things like "df", "gatt", "iso", etc.

Dots in file names usually indicate file extensions,
and are thus not particularly good to use in this way.
Specifically the Kconfig.iso file was troublesome,
as .iso is a common file extension for something
entirely different.

This commit limit the changes to Bluetooth, but ideally
this should be applied more widely.

Signed-off-by: Emil Gydesen <emil.gydesen@nordicsemi.no>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -408,7 +408,7 @@ Bluetooth Host:
     - samples/bluetooth/tmap*/
     - samples/bluetooth/iso_*/
     - samples/bluetooth/mesh*/
-    - subsys/bluetooth/Kconfig.iso
+    - subsys/bluetooth/Kconfig_iso
     - subsys/bluetooth/host/iso.c
     - subsys/bluetooth/host/iso_internal.h
     - subsys/bluetooth/host/shell/iso.c
@@ -525,7 +525,7 @@ Bluetooth ISO:
     - include/zephyr/bluetooth/iso.h
     - doc/connectivity/bluetooth/shell/host/iso.rst
     - samples/bluetooth/iso_*/
-    - subsys/bluetooth/Kconfig.iso
+    - subsys/bluetooth/Kconfig_iso
     - subsys/bluetooth/host/iso.c
     - subsys/bluetooth/host/iso_internal.h
     - subsys/bluetooth/host/shell/iso.c
