--- a/subsys/bluetooth/audio/Kconfig
+++ b/subsys/bluetooth/audio/Kconfig
@@ -33,21 +33,21 @@ config BT_AUDIO_NOTIFY_RETRY_DELAY
 	  retry to send notification that failed due to lack of TX buffers
 	  available.
 
-rsource "Kconfig.bap"
-rsource "Kconfig.vocs"
-rsource "Kconfig.aics"
-rsource "Kconfig.vcp"
-rsource "Kconfig.micp"
-rsource "Kconfig.csip"
-rsource "Kconfig.tbs"
-rsource "Kconfig.mcs"
-rsource "Kconfig.has"
-rsource "Kconfig.mpl"
-rsource "Kconfig.mctl"
-rsource "Kconfig.cap"
-rsource "Kconfig.tmap"
-rsource "Kconfig.gmap"
-rsource "Kconfig.pbp"
+rsource "Kconfig_bap"
+rsource "Kconfig_vocs"
+rsource "Kconfig_aics"
+rsource "Kconfig_vcp"
+rsource "Kconfig_micp"
+rsource "Kconfig_csip"
+rsource "Kconfig_tbs"
+rsource "Kconfig_mcs"
+rsource "Kconfig_has"
+rsource "Kconfig_mpl"
+rsource "Kconfig_mctl"
+rsource "Kconfig_cap"
+rsource "Kconfig_tmap"
+rsource "Kconfig_gmap"
+rsource "Kconfig_pbp"
 
 module = BT_AUDIO
 module-str = "Bluetooth Audio"
