telink: samples: FactoryData verifier for Telink
Read, parse and print Matter Factory Data Partition
from simple Zephyr sample.
You should have factory_partition present/flashed
and run the sample after.

telink: samples: refactored FactoryData parser

Got rid of flash reading operation. Now direct
copying from flash memory address via pointer.

telink: samples: CI build for B92 FactoryData

Added Factory Data verifier CI job to B92 build workflow.
Removed obsolete headers, used zcbor_string instead of custom created.

Signed-off-by: Dmytro Huz <diman1436@gmail.com>

--- a/.github/workflows/telink-b92-build.yaml
+++ b/.github/workflows/telink-b92-build.yaml
@@ -118,6 +118,11 @@ jobs:
         cd ..
         west build -b tlsr9528a_retention        -d build_retention_basic_b92           zephyr/samples/boards/tlsr9x/basic                       -- -DCONFIG_COMPILER_WARNINGS_AS_ERRORS=y -DCONFIG_SOC_SERIES_RISCV_TELINK_B9X_NON_RETENTION_RAM_CODE=y
 
+    - name: Build B92 FactoryData verifier (boards/tlsr9x/factorydata)
+      run: |
+        cd ..
+        west build -b tlsr9528a        -d build_factorydata_b92           zephyr/samples/boards/tlsr9x/factorydata                               -- -DCONFIG_COMPILER_WARNINGS_AS_ERRORS=y
+
     - name: Build B92 net/sockets/echo_client for OpenThread with PM deep-sleep
       run: |
         cd ..
