--- a/drivers/sensor/silabs/Kconfig
+++ b/drivers/sensor/silabs/Kconfig
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # zephyr-keep-sorted-start
+source "drivers/sensor/silabs/gecko_acmp/Kconfig"
 source "drivers/sensor/silabs/si7006/Kconfig"
 source "drivers/sensor/silabs/si7055/Kconfig"
 source "drivers/sensor/silabs/si7060/Kconfig"
