--- a/dts/arm/silabs/efr32mg24.dtsi
+++ b/dts/arm/silabs/efr32mg24.dtsi
@@ -430,6 +430,22 @@
 			#io-channel-cells = <1>;
 		};
 
+		acmp0: acmp@59008000 {
+			compatible = "silabs,gecko-acmp";
+			reg = <0x59008000 0x4000>;
+			interrupts = <40 0>;
+			clocks = <&cmu CLOCK_ACMP0 CLOCK_BRANCH_LSPCLK>;
+			status = "disabled";
+		};
+
+		acmp1: acmp@5900c000 {
+			compatible = "silabs,gecko-acmp";
+			reg = <0x5900c000 0x4000>;
+			interrupts = <41 0>;
+			clocks = <&cmu CLOCK_ACMP1 CLOCK_BRANCH_LSPCLK>;
+			status = "disabled";
+		};
+
 		dcdc: dcdc@50094000 {
 			compatible = "silabs,series2-dcdc";
 			reg = <0x50094000 0x4000>;
