[nxp noup] coex: Fix device hang when running TCP Zperf
For coex APP with both BT and Wi-Fi embedded supplicant, if run the
'zperf tcp upload' CMD with '-a', then the zperf_work_q thread will
handle the TCP connect and initialize the TCP sequence. As
NET_TCP_ISN_RFC6528 is enabled, it will initialize the ctr_drbg and
eventually calls the block_cipher_df, which has big local value and
cause stack overflow. Increasing the zperf_work_q thread can fix this
issue.

Signed-off-by: Maochen Wang <maochen.wang@nxp.com>

--- a/tests/bluetooth/shell/overlay-wifi-nxp.conf
+++ b/tests/bluetooth/shell/overlay-wifi-nxp.conf
@@ -113,6 +113,7 @@ CONFIG_NET_TCP_WORKQ_STACK_SIZE=2048
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_NET_SOCKETS_SERVICE_STACK_SIZE=4096
 CONFIG_ISR_STACK_SIZE=4096
+CONFIG_ZPERF_WORK_Q_STACK_SIZE=3072
 
 # optimization level
 # refer to Kconfig.zephyr for Optimizations Level
