--- a/tests/bluetooth/tester/overlay-wifi-nxp.conf
+++ b/tests/bluetooth/tester/overlay-wifi-nxp.conf
@@ -113,6 +113,7 @@ CONFIG_NET_TCP_WORKQ_STACK_SIZE=2048
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_NET_SOCKETS_SERVICE_STACK_SIZE=4096
 CONFIG_ISR_STACK_SIZE=4096
+CONFIG_ZPERF_WORK_Q_STACK_SIZE=3072
 
 # optimization level
 # refer to Kconfig.zephyr for Optimizations Level
