--- a/samples/sensor/aht20_bmp280_board/CMakeLists.txt
+++ b/samples/sensor/aht20_bmp280_board/CMakeLists.txt
@@ -1,7 +1,7 @@
 #-------------------------------------------------------------------------------
 # ATH20+BMP280 Board Sample
 #
-# Copyright (c) 2023 Russ Webber
+# Copyright (c) 2025 Sentry Robotics
 # SPDX-License-Identifier: Apache-2.0
 
 cmake_minimum_required(VERSION 3.13.1)
