--- a/samples/sensor/aht20_bmp280_board/prj.conf
+++ b/samples/sensor/aht20_bmp280_board/prj.conf
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Russ Webber
+# Copyright (c) 2025 Sentry Robotics
 # SPDX-License-Identifier: Apache-2.0
 #
 # This file contains selected Kconfig options for the application.
@@ -8,3 +8,4 @@ CONFIG_I2C=y
 CONFIG_LOG=y
 CONFIG_SENSOR_LOG_LEVEL_DBG=y
 # CONFIG_ENS160_APP_LOG_LEVEL_DBG=y
+CONFIG_ESP32_USE_UNSUPPORTED_REVISION=y
