--- a/samples/bluetooth/central_ht/sample.yaml
+++ b/samples/bluetooth/central_ht/sample.yaml
@@ -13,10 +13,13 @@ tests:
       - qemu_cortex_m3
   sample.bluetooth.central_ht.nxp:
     # Disabling monolithic since CI environment doesn't use blobs
-    build_only: true
-    harness: bluetooth
+    harness: pytest
     platform_allow:
       - rd_rw612_bga
       - frdm_rw612
+      - frdm_mcxw71/mcxw716c
     extra_configs:
       - CONFIG_NXP_MONOLITHIC_NBU=n
+    harness_config:
+      pytest_dut_scope: session
+      pytest_args: ['--harness_apps=zephyr/samples/bluetooth/peripheral_ht']
