--- a/samples/bluetooth/peripheral_ht/sample.yaml
+++ b/samples/bluetooth/peripheral_ht/sample.yaml
@@ -25,10 +25,13 @@ tests:
       - mimxrt1020_evk
   sample.bluetooth.peripheral_ht.nxp:
     # Disabling monolithic since CI environment doesn't use blobs
-    build_only: true
-    harness: bluetooth
+    harness: pytest
     platform_allow:
       - rd_rw612_bga
       - frdm_rw612
+      - frdm_mcxw71/mcxw716c
     extra_configs:
       - CONFIG_NXP_MONOLITHIC_NBU=n
+    harness_config:
+      pytest_dut_scope: session
+      pytest_args: ['--harness_apps=zephyr/samples/bluetooth/central_ht']
