@FIR-446: Zephyr on SKYLP (#12)
* @FIR-446: Zephyr on SKYLP
This commit brings changes necessary to support SKYLP on Zephyr.
It also makes changes necessary to support mulitple boards.
In addition, the structure is customized for TSI SOCs.

* Reverting print string so that sanity is not affected.

---------

Co-authored-by: Riaz Khan <riaz@tsavoritesi.com>

--- a/boards/tsi/skylp/board.yml
+++ b/boards/tsi/skylp/board.yml
@@ -1,8 +1,8 @@
 board:
-  name: tsi_skyp
+  name: tsi_skylp
   vendor: tsi
   socs:
-  - name: skyp
+  - name: skylp
     variants:
     - name: tensilica
       cpucluster: txe
