--- a/soc/tsi/soc.yml
+++ b/soc/tsi/soc.yml
@@ -1,9 +1,17 @@
 family:
-  - name: tsi
+  - name: sky
     series:
       - name: skyp_v1
         socs:
           - name: skyp
+            cpuclusters:
+              - name: m85
+              - name: txe
+  - name: sky
+    series:
+      - name: skylp_v1
+        socs:
+          - name: skylp
             cpuclusters:
               - name: m85
               - name: txe
