--- a/boards/nxp/imx95_evk_15x15/imx95_evk_15x15-pinctrl.dtsi
+++ b/boards/nxp/imx95_evk_15x15/imx95_evk_15x15-pinctrl.dtsi
@@ -50,4 +50,14 @@
 			drive-strength = "x4";
 		};
 	};
+
+	flexcan2_default: flexcan2_default {
+		group0 {
+			pinmux = <&iomuxc_gpio_io27_can_rx_can2_rx>,
+				<&iomuxc_gpio_io25_can_tx_can2_tx>;
+			bias-pull-down;
+			slew-rate = "slightly_fast";
+			drive-strength = "x4";
+		};
+	};
 };
