--- a/boards/atmel/sam/sam4s_xplained/sam4s_xplained-pinctrl.dtsi
+++ b/boards/atmel/sam/sam4s_xplained/sam4s_xplained-pinctrl.dtsi
@@ -54,6 +54,12 @@
 				 <PB1X_ADC_AD5>;
 		};
 	};
+	dacc_default: dacc_default {
+		group1 {
+			pinmux = <PB13D_DACC_DAC0>,
+				 <PB14D_DACC_DAC1>;
+		};
+	};
 	smc_default: smc_default {
 		group1 {
 			pinmux = <PC18A_EBI_A0>,
