lib: libc: Add fopen in newlibc, minimal and picolibc
fopen implementation calls POSIX implementation of
open in device_io.c

Signed-off-by: Ahmed Adel <a.adel2010@gmail.com>

--- a/lib/libc/minimal/CMakeLists.txt
+++ b/lib/libc/minimal/CMakeLists.txt
@@ -35,6 +35,10 @@ zephyr_library_sources(
   ${STRERROR_TABLE_H}
 )
 
+zephyr_library_sources_ifdef(CONFIG_POSIX_FILE_SYSTEM
+  source/file_ops.c
+  )
+
 if(CONFIG_MINIMAL_LIBC_TIME)
   zephyr_library_sources(source/time/gmtime.c)
 endif()
