--- a/drivers/stepper/Kconfig
+++ b/drivers/stepper/Kconfig
@@ -31,10 +31,10 @@ rsource "step_dir/Kconfig"
 comment "Stepper Drivers"
 
 # zephyr-keep-sorted-start
-rsource "Kconfig.a4988"
 rsource "Kconfig.fake"
 rsource "Kconfig.gpio"
 rsource "adi_tmc/Kconfig"
+rsource "allegro/Kconfig"
 rsource "ti/Kconfig"
 # zephyr-keep-sorted-stop
 
